--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "firefox",
+            "request": "launch",
+            "reAttach": true,
+            "name": "Launch localhost",
+            "url": "http://localhost:4200/vote/1",
+            "webRoot": "${workspaceFolder}"
+        },
+        {
             "type": "node",
             "request": "launch",
             "name": "NodeJs: backend server",
@@ -15,7 +23,7 @@
             "args": [
                 "./data/gesten/"
             ]
-        }
+        },
         {
             "type": "node",
             "request": "launch",
