--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@types/seedrandom": "^2.4.28",
     "@types/url-join": "^4.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "mongoose": "^5.10.9",
     "mongoose-sequence": "^5.2.2",
     "rxjs": "~6.6.0",
+    "seedrandom": "^3.0.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
