--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "node",
+            "request": "launch",
+            "name": "Update path",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${workspaceFolder}/backend/update_path.js",
+            "args": [
+                "data/gesten", 
+                "test/"
+            ]
+        },
+        {
             "type": "firefox",
             "request": "launch",
             "reAttach": true,
@@ -20,9 +33,6 @@
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}/backend/server.js",
-            "args": [
-                "./data/gesten/"
-            ]
         },
         {
             "type": "node",
