--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    {
+        "name": "Launch Chrome",
+        "request": "launch",
+        "type": "pwa-chrome",
+        "url": "http://localhost:4200",
+        "webRoot": "${workspaceFolder}"
+    },
         {
             "type": "node",
             "request": "launch",
@@ -22,7 +29,7 @@
             "request": "launch",
             "reAttach": true,
             "name": "Launch localhost",
-            "url": "http://localhost:4200/vote/11",
+            "url": "http://localhost:4200",
             "webRoot": "${workspaceFolder}"
         },
         {
