--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@svgdotjs/svg.js": "^3.0.16",
     "@types/seedrandom": "^2.4.28",
     "@types/url-join": "^4.0.0",
     "body-parser": "^1.19.0",
