--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@svgdotjs/svg.js": "^3.0.16",
     "@types/seedrandom": "^2.4.28",
     "@types/url-join": "^4.0.0",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
