--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "mongoose": "^5.10.9",
     "mongoose-sequence": "^5.2.2",
     "rxjs": "~6.6.0",
