--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "backend": "node backend/server.js"
+    "backend": "node backend/server.js",
+    "deploy": "ng build --prod=true && scp -r dist/ olivia:~/"
   },
   "private": true,
   "dependencies": {
